move console log

--- a/client/oauthcallback.html
+++ b/client/oauthcallback.html
@@ -2,7 +2,7 @@
 <body>
 <script>
     window.opener.force.oauthCallback(window.location.href);
-    window.close();
+    //window.close();
 </script>
 </body>
 </html>
