move console log

--- a/client/oauthcallback.html
+++ b/client/oauthcallback.html
@@ -1,8 +1,10 @@
 <html>
 <body>
 <script>
-    window.opener.force.oauthCallback(window.location.href);
+    //window.opener.force.oauthCallback(window.location.href);
     //window.close();
+
+    force.oauthCallback(window.location.href);
 </script>
 </body>
 </html>
