--- a/client/oauthcallback.html
+++ b/client/oauthcallback.html
@@ -1,5 +1,10 @@
 <html>
 <body>
+        <script src="lib/jquery.js"></script>
+        <script src="lib/router.js"></script>
+        <script src="lib/pageslider.js"></script>
+        <script src="lib/force.js"></script>
+        <script src="js/app.js"></script>
 <script>
     //window.opener.force.oauthCallback(window.location.href);
     //window.close();
